Make link element have fixed width, align items to center of main dashboard div

--- a/DC-Manager-App/app_remote/public/css/dashboard.css
+++ b/DC-Manager-App/app_remote/public/css/dashboard.css
@@ -1,10 +1,12 @@
 #dashboard {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #dashboard a {
     text-decoration: none;
+    width: 200px;
 }
 
 #dashboard p {
